input / button outline fix on mobile

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -58,7 +58,7 @@ input,button{
 }
 @media screen and (min-width: 320px) and (max-width: 767px){
     .selected{
-        border: 2.5px solid gold;
+        border: 1.5px solid gold;
     }
 }
 
